@@ -7,11 +7,13 @@ package Driver;
 
 import Compression.GDouglasPeuker;
 import Compression.SummarisedData;
+import Compression.WorstBinCounter;
 import GeoHelper.GeoHelper;
 import GeoHelper.GPSPoint;
 import Decoder.KGonCompressionDecoder;
 import Compression.KGonCompression;
 import Helper.IOHelper;
+import Helper.Pair;
 import java.io.*;
 import java.util.*;
 //import org.joda.time.DateTime;
@@ -39,11 +41,13 @@ public class CompressionDriver {
     CompressionDriver gridCompression = new CompressionDriver();
     int allowedEpsilon = 10; //error allowed in meters (default value is 10)
     int totalEnergyForTransfer = 300;
+    int thresholdForPointSize = 2000; // This is the amount of data that canbe transferred in bytes
     String distanceType = new String("exact");
     String kGonType = new String("Hexa");
     int thresholdForPointRecord = 2000;
     ArrayList<GPSPoint> allStreamingValues = new ArrayList<GPSPoint>();
     ArrayList<Date> allDateTimeValues = new ArrayList<Date>();
+    String fileName = "tag1936_gps.txt";
     if (args.length >= 3){
         
   	  if (args[0].equals("-e")){
@@ -51,8 +55,8 @@ public class CompressionDriver {
            allowedEpsilon = Integer.parseInt(args[1]);
            /************************ Core compression technique ************************/
             //allStreamingValues = gridCompression.getPositionData("NN_Position.dat", " ");
-            allStreamingValues = IOHelper.getPositionData("NN_Position.dat", " ");
-            allDateTimeValues = IOHelper.getTimeData( "tag1938_gps.txt", ","); 
+            allStreamingValues = IOHelper.getPositionData(fileName, ",");
+            allDateTimeValues = IOHelper.getTimeData( fileName, ","); 
             if (args[2].equals("grid")){
               gridCompression.runSimpleGridCase(allStreamingValues, allowedEpsilon);
               //results = gridCompression.performGridCompression(allStreamingValues, allowedEpsilon);
@@ -93,23 +97,33 @@ public class CompressionDriver {
                     }
                 }
                //gridCompression.runBothAdaptiveWithThreshold(thresholdForPointRecord, allStreamingValues, allowedEpsilon, distanceType, kGonType, totalEnergyForTransfer, allDateTimeValues);
-               //gridCompression.runBothCasesWithCodedInterpolation(allStreamingValues, allowedEpsilon, distanceType, kGonType);
+               //gridCompression.runBothCasesWithCodedInterpolation(allStreamingValues, allowedEpsilon, distanceType, kGonType, allDateTimeValues);
                //gridCompression.runBothCasesWithInterpolation(allStreamingValues, allowedEpsilon, distanceType, kGonType);
                // gridCompression.runForGettingTheVariation(allStreamingValues, allowedEpsilon);
-                gridCompression.runBothCase(allStreamingValues, allowedEpsilon, distanceType, kGonType);
+               //gridCompression.runBothCase(allStreamingValues, allowedEpsilon, distanceType, kGonType);
 
             }else if (args[2].equals("grid-interpolated")){
               /*
                * This part implements adaptive grid compression tecnique with the interpolation for very long distanes when the sampling rate is not 
                * constant. 
                */
+                if(args.length >= 4){
+                    if (args[3].equals("-th")){
+                        thresholdForPointSize = Integer.parseInt(args[4]);
+                    }
+                }
+                if(args.length >= 6){
+                    if (args[5].equals("-energy")){
+                        totalEnergyForTransfer = Integer.parseInt(args[6]);
+                    }
+                }
                //gridCompression.runBothCasesWithInterpolation(allStreamingValues, allowedEpsilon, distanceType, kGonType);
-               gridCompression.runBothCasesWithCodedInterpolation(allStreamingValues, allowedEpsilon, distanceType, kGonType, allDateTimeValues);
+               gridCompression.runBothCasesWithCodedInterpolation(allStreamingValues, allowedEpsilon, distanceType, kGonType, allDateTimeValues, thresholdForPointSize);
 
             }else if (args[2].equals("time-distance-frequency")){
 
               //datetime.datetime(year, month, day[, hour[, minute[, second[, microsecond[, tzinfo]]]]])
-              gridCompression.runForGettingTheVariation(allStreamingValues, allowedEpsilon);
+              gridCompression.runForGettingTheVariation(allStreamingValues, allowedEpsilon, allDateTimeValues, fileName);
              
             }else{
                CompressionDriver.usage();
@@ -129,20 +143,20 @@ public class CompressionDriver {
   /*
    * This function is run in order to get the differences in time and distance between consecutive GPS points.
    */
-  void runForGettingTheVariation(ArrayList<GPSPoint> allStreamingValues, int allowedEpsilon){
-    ArrayList<Date> allDateTimeValues = new ArrayList<Date>();
+  void runForGettingTheVariation(ArrayList<GPSPoint> allStreamingValues, int allowedEpsilon, ArrayList<Date> allDateTimeValues, String fileName){
+    //ArrayList<Date> allDateTimeValues = new ArrayList<Date>();
     String valuesToWrite = "";
     for (int i=1; i<allStreamingValues.size();i++){
         if (GeoHelper.getDistance(allStreamingValues.get(i-1), allStreamingValues.get(i))<2000)
             valuesToWrite +=GeoHelper. getDistance(allStreamingValues.get(i-1), allStreamingValues.get(i))+"\n";
     }
-    IOHelper.writeToFile(valuesToWrite, "change-in-distance-without-variation.txt");
+    IOHelper.writeToFile(valuesToWrite, "change-in-distance"+fileName);
 
     valuesToWrite = "";
     for (int i=1; i<allDateTimeValues.size();i++){
      valuesToWrite += allDateTimeValues.get(i).getTime()- allDateTimeValues.get(i-1).getTime()+"\n";
     }
-    IOHelper.writeToFile(valuesToWrite, "change-in-time.txt");
+    IOHelper.writeToFile(valuesToWrite, "change-in-time"+fileName);
   }
 
   /*
@@ -185,35 +199,42 @@ public class CompressionDriver {
   /*
    * This function implements the approximation by interpolation the points between the far away points alongwith codes for how far
    */
-  void runBothCasesWithCodedInterpolation(ArrayList<GPSPoint> allStreamingValues, int allowedEpsilon, String distanceType, String kGonType, ArrayList<Date> allDateTimeValues){
+  void runBothCasesWithCodedInterpolation(ArrayList<GPSPoint> allStreamingValues, int allowedEpsilon, String distanceType, String kGonType, ArrayList<Date> allDateTimeValues, int thresholdForTransferData){
     KGonCompression kgonCompressionPerformer = new KGonCompression();
     KGonCompressionDecoder gridCompressionDecoder = new KGonCompressionDecoder();
+    Pair<HashMap<Integer, Integer>, Pair<ArrayList<Double>, HashMap<Integer, Integer>>> returningBinsWithPointsPair;
+    Pair<HashMap<Integer, Integer>, Pair<ArrayList<Double>, HashMap<Integer, Integer>>> returningBinsWithPointsPairLoose;
+    Pair<ArrayList<Double>, HashMap<Integer, Integer>> returningEmptyBinsPair;
     ArrayList<Double> results;
     ArrayList<Double> resultsLoose;
     ArrayList<GPSPoint> resultantValues = new ArrayList<GPSPoint>();
     ArrayList<GPSPoint> interpolatedSource;
     ArrayList<GPSPoint> whileConstructing = new ArrayList<GPSPoint>();
+     ArrayList<WorstBinCounter> binCounterArray = new ArrayList<WorstBinCounter>();
 
     String resultOfBoth = "Error Threshold"+"\t"+"Loose Hexagons"+"\t"+"Strict Hexagons"+"\t"+"Douglas"+"\n";
     String resultSizeOfBoth = "Error Threshold"+"\t"+"Loose Hexagons"+"\t"+"Strict Hexagons"+"\t"+"Douglas"+"\n";
     String hausDorffDistance = "Error Threshold"+"\t"+"Loose Hexagons"+"\t"+"Strict Hexagons"+"\t"+"Douglas"+"\n"; 
     //interpolatedSource = kgonCompressionPerformer.performInterpolation(allStreamingValues, allowedEpsilon, distanceType, resultantValues, kGonType);
-    for (int k = 10; k<1500; k+=10){
-      results = kgonCompressionPerformer.performGridCompressionCodedInterpolation(allStreamingValues, whileConstructing, k, distanceType, kGonType, allDateTimeValues);
-      resultsLoose = kgonCompressionPerformer.performGridCompressionCodedInterpolation(allStreamingValues, whileConstructing, k, "loose", kGonType, allDateTimeValues);
-      IOHelper.writeGridPositionDataDouble(allStreamingValues.get(0), results, "data/strict-grid-coded-"+k+".txt");
+    //for (int k = 100; k<250; k+=100){
+      returningBinsWithPointsPair = kgonCompressionPerformer.performGridCompressionCodedInterpolation(allStreamingValues, whileConstructing, allowedEpsilon, distanceType, kGonType, allDateTimeValues, binCounterArray);
+      returningBinsWithPointsPairLoose = kgonCompressionPerformer.performGridCompressionCodedInterpolation(allStreamingValues, whileConstructing, allowedEpsilon, "loose", kGonType, allDateTimeValues, binCounterArray);
+      
+      results = returningBinsWithPointsPair.getSecond().getFirst();
+      resultsLoose = returningBinsWithPointsPairLoose.getSecond().getFirst();
+      IOHelper.writeGridPositionDataDouble(allStreamingValues.get(0), results, "data/strict-grid-coded-"+allowedEpsilon+".txt");
       //resultsLoose = performGridCompression(allStreamingValues, k, "loose");
       //writeGridPositionData(allStreamingValues.get(0), resultsLoose, "loose-grid-"+k+".txt");
-      ArrayList<GPSPoint> convertedPoints = gridCompressionDecoder.getGPSPointListInterpolated(allStreamingValues.get(0), results, k, distanceType);
-      ArrayList<GPSPoint> looseConvertedPoints = gridCompressionDecoder.getGPSPointListInterpolated(allStreamingValues.get(0), resultsLoose, k, "loose");
-      IOHelper.writeGridConvertedGPS(convertedPoints, "data/converted-coded"+k+".txt");
-      IOHelper.writeGridConvertedGPS(whileConstructing, "data/example-grid-converted-coded-"+k+".txt");
-      resultantValues = GDouglasPeuker.douglasPeucker(allStreamingValues, k);
-      IOHelper.writeDouglasPositionData(resultantValues, "data/douglas-"+k+".txt");
-      resultOfBoth += k+"\t"+(looseConvertedPoints.size())+"\t"+(convertedPoints.size())+"\t"+(resultantValues.size())+"\n";
-      resultSizeOfBoth += k+"\t"+(float)((resultsLoose.size()*4)/8)+"\t"+(float)((results.size()*4)/8)+"\t"+(float)((resultantValues.size()*64)/8)+"\n";
-      hausDorffDistance += k+"\t"+GeoHelper.getHausdorffDistance(allStreamingValues, looseConvertedPoints)+"\t"+GeoHelper.getHausdorffDistance(allStreamingValues, convertedPoints)+"\t"+GeoHelper.getHausdorffDistance(allStreamingValues, resultantValues)+"\n";
-    }
+      ArrayList<GPSPoint> convertedPoints = gridCompressionDecoder.getGPSPointListCodedInterpolated(allStreamingValues.get(0), results, allowedEpsilon, distanceType);
+      ArrayList<GPSPoint> looseConvertedPoints = gridCompressionDecoder.getGPSPointListCodedInterpolated(allStreamingValues.get(0), resultsLoose, allowedEpsilon, "loose");
+      IOHelper.writeGridConvertedGPS(convertedPoints, "data/converted-coded"+allowedEpsilon+".txt");
+      IOHelper.writeGridConvertedGPS(whileConstructing, "data/example-grid-converted-coded-"+allowedEpsilon+".txt");
+      resultantValues = GDouglasPeuker.douglasPeucker(allStreamingValues, allowedEpsilon);
+      IOHelper.writeDouglasPositionData(resultantValues, "data/douglas-"+allowedEpsilon+".txt");
+      resultOfBoth += allowedEpsilon+"\t"+(looseConvertedPoints.size())+"\t"+(convertedPoints.size())+"\t"+(resultantValues.size())+"\n";
+      resultSizeOfBoth += allowedEpsilon+"\t"+(float)((resultsLoose.size()*4)/8)+"\t"+(float)((results.size()*4)/8)+"\t"+(float)((resultantValues.size()*64)/8)+"\n";
+      hausDorffDistance += allowedEpsilon+"\t"+GeoHelper.getHausdorffDistance(allStreamingValues, looseConvertedPoints)+"\t"+GeoHelper.getHausdorffDistance(allStreamingValues, convertedPoints)+"\t"+GeoHelper.getHausdorffDistance(allStreamingValues, resultantValues)+"\n";
+    //}
     IOHelper.writeToFile(resultOfBoth, "coded-interpolation-total-points-both.txt");
     IOHelper.writeToFile(resultSizeOfBoth, "coded-interpolation-total-size-both.txt");
     IOHelper.writeToFile(hausDorffDistance, "coded-interpolation-hausdorff-both.txt");
